--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zava Clothing Concept Analyzer</title>
+    <title>Zava 의류 컨셉 분류 AI 에이전트</title>
     <link rel="stylesheet" href="/static/style.css">
 
     <!-- React and Babel for the UI components -->
